143-IX. Про внесення змін до деяких законів України щодо державного регулювання космічної діяльності

--- a/Закони/Про_дозвільну_систему_у_сфері_господарської_діяльності.md
+++ b/Закони/Про_дозвільну_систему_у_сфері_господарської_діяльності.md
@@ -16,7 +16,7 @@
 
     * об'єкт, на який видається документ дозвільного характеру (далі - об'єкт), - природні ресурси, земельна ділянка, ґрунтовий покрив земельних ділянок, споруда, будівля, приміщення, устаткування, обладнання та механізми, що вводяться в експлуатацію або проектуються, окрема операція, господарська діяльність певного виду, робота та послуга, а також документи, які використовуються суб'єктом господарювання у процесі проходження погоджувальної (дозвільної) процедури (проектна документація на будівництво об'єктів, землевпорядна документація, містобудівна документація, гірничий відвід);
 
-    * декларація відповідності матеріально-технічної бази вимогам законодавства (далі - декларація) - документ, яким суб'єкт господарювання повідомляє адміністратора або представника відповідного дозвільного органу про відповідність своєї матеріально-технічної бази вимогам законодавства. У такий спосіб суб'єкт господарювання набуває права на провадження певних дій щодо здійснення господарської діяльності або видів господарської діяльності без отримання документа дозвільного характеру.
+    * декларація про провадження господарської діяльності (далі - декларація) - документ, яким суб’єкт господарювання повідомляє дозвільний орган про свою відповідність вимогам законодавства до певного виду господарської діяльності (у тому числі матеріально-технічної бази, кваліфікації персоналу - якщо це зумовлено особливостями провадження відповідного виду господарської діяльності) та на підставі якого набуває право на провадження заявленого виду господарської діяльності і несе передбачену законом відповідальність.
 
     * Форма та порядок повідомлення адміністратора або відповідного дозвільного органу про відповідність матеріально-технічної бази суб’єкта господарювання вимогам законодавства та внесення про це запису до Єдиного державного реєстру юридичних осіб, фізичних осіб - підприємців та громадських формувань встановлюються Кабінетом Міністрів України;
 
@@ -98,6 +98,8 @@
 Реєстрацію декларацій здійснює дозвільний орган на безоплатній основі протягом п’яти робочих днів з дня отримання декларації шляхом внесення відповідного запису до Єдиного державного реєстру юридичних осіб, фізичних осіб - підприємців та громадських формувань.
 
 Відмова у реєстрації декларації не допускається.
+
+6. Суб’єкт господарювання повідомляє дозвільний орган про зміну інформації, яка була зазначена у поданій декларації, у порядку та за формою, встановленими Кабінетом Міністрів України, протягом семи робочих днів з дня настання таких змін.
 
 **Стаття 4-1.** Основні вимоги до порядку видачі документів дозвільного характеру або відмови в їх видачі, переоформлення, анулювання документів дозвільного характеру
 
