--- a/Закони/Про_космічну_діяльність.md
+++ b/Закони/Про_космічну_діяльність.md
@@ -13,11 +13,13 @@
 
 У цьому Законі наведені нижче терміни та поняття вживаються у такому значенні:
 
-* космічна діяльність - наукові космічні дослідження, створення та застосування космічної техніки, використання космічного простору;
+* космічна діяльність - наукові космічні дослідження, використання космічного простору, розроблення, виробництво, ремонт та технічне обслуговування, випробування, експлуатація, управління об’єктами космічної діяльності (у тому числі їх агрегатами та складовими частинами), забезпечення запуску, запуск та повернення космічних апаратів, їх складових частин з космічного простору на землю;
 
 * об’єкти космічної діяльності (космічна техніка) - матеріальні предмети штучного походження, що проектуються, виготовляються та експлуатуються як у космічному просторі (космічний сегмент, космічна інфраструктура), так і на поверхні Землі (наземний сегмент, наземна інфраструктура) з метою дослідження та використання космічного простору;
 
-* суб’єкти космічної діяльності - підприємства, установи та організації, в тому числі міжнародні та іноземні, які здійснюють космічну діяльність;
+* суб’єкти космічної діяльності - підприємства, установи та організації будь-якої форми власності та організаційно-правової форми, в тому числі міжнародні та іноземні, які здійснюють космічну діяльність;
+
+* декларація про провадження господарської діяльності у сфері космічної діяльності - документ, яким суб’єкт космічної діяльності повідомляє центральний орган виконавчої влади, що забезпечує формування і реалізує державну політику у сфері космічної діяльності, про намір здійснювати космічну діяльність;
 
 * космічний апарат - літальний технічний засіб для польотів у космос і в космосі з метою його дослідження та використання;
 
@@ -65,9 +67,9 @@
 
 Основними засадами космічної діяльності в Україні є:
 
-* державне регулювання;
-
 * державна підтримка комерціалізації космічної діяльності та залучення інвестицій в космічну галузь України;
+
+* відкриття космосу для громадян та юридичних осіб та можливість вільно досліджувати та використовувати космос, включаючи використання космічного простору та ресурсів, що містяться в ньому, з обмеженнями лише коли це необхідно для забезпечення дотримання інтересів національної безпеки держави Україна, а також дозволу та нагляду за неурядовими космічними заходами, щоб переконатися, що такі дії здійснюються відповідно до міжнародних зобов’язань України у космосі;
 
 * еволюційність розвитку і послідовність реформування державної політики у галузі дослідження та використання космічного простору;
 
@@ -92,13 +94,17 @@
 
 * цільової підготовки кадрів за рахунок Державного бюджету України;
 
-* запровадження ліцензування такої діяльності;
+* запровадження декларування про провадження господарської діяльності у сфері космічної діяльності;
 
-* контролю за здійсненням зовнішньоекономічної діяльності суб’єктами космічної діяльності.
+* запровадження дозволів на право здійснення окремих видів космічної діяльності та забезпечення контролю за провадженням такої діяльності;
+
+* контролю за здійсненням зовнішньоекономічної діяльності суб’єктами космічної діяльності;
+
+* державного нагляду (контролю) за дотриманням суб’єктами космічної діяльності України приватної форми власності законодавства про космічну діяльність в Україні в порядку, передбаченому Законом України "Про основні засади державного нагляду (контролю) у сфері господарської діяльності.
 
 **Стаття 6.** Компетенція центральних органів виконавчої влади у сфері космічної діяльності
 
-Центральний орган виконавчої влади, що забезпечує формування державної політики у сфері космічної діяльності, в межах своєї компетенції:
+Центральний орган виконавчої влади, що забезпечує формування і реалізує державну політику у сфері космічної діяльності, в межах своєї компетенції:
 
 * розробляє концептуальні основи державної політики у галузі дослідження і використання космічного простору в мирних цілях та в інтересах безпеки держави;
 
@@ -108,11 +114,11 @@
 
 * здійснює керівництво у сфері управління та координації діяльності підприємств, установ та організацій космічної та суміжних галузей;
 
-* є державним генеральним замовником науково-дослідних робіт з дослідження і використання космічного простору, науково-дослідних і дослідно-конструкторських робіт з проектування, виготовлення та випробування космічної техніки, у тому числі міжнародних космічних проектів;
+* є державним замовником науково-дослідних робіт з дослідження і використання космічного простору, науково-дослідних і дослідно-конструкторських робіт з проектування, виготовлення та випробування космічної техніки, у тому числі міжнародних космічних проектів;
 
 * забезпечує суб’єкти космічної діяльності в Україні необхідною нормативною документацією;
 
-* здійснює координацію та контроль зовнішньоекономічної діяльності в космічній галузі України на відповідність законодавству та міжнародним договорам України;
+* здійснює координацію державних підприємств, установ та організацій, в тому числі при здійсненні ними зовнішньоекономічної діяльності в космічній галузі України, на відповідність законодавству та міжнародним договорам України;
 
 * надає підтримку в підготовці та реалізації міжнародних проектів у сфері дослідження та використання космічного простору;
 
@@ -122,17 +128,21 @@
 
 * бере участь у підготовці міжнародних договорів України;
 
-* затверджує порядок діяльності представництв генерального замовника - центрального органу виконавчої влади, що реалізує державну політику у сфері космічної діяльності, з контролю якості та прийняття космічної техніки та іншої продукції;
+* затверджує порядок діяльності представництв замовника - центрального органу виконавчої влади, що забезпечує формування і реалізує державну політику у сфері космічної діяльності, з контролю якості та прийняття космічної техніки та іншої продукції;
+
+* здійснює контроль за дотриманням державними підприємствами, установами та організаціями законодавства та міжнародних договорів України в космічній сфері, у тому числі при здійсненні ними зовнішньоекономічної діяльності;
+
+* здійснює державний нагляд (контроль) за дотриманням суб’єктами космічної діяльності України приватної форми власності законодавства про космічну діяльність в Україні в порядку, передбаченому Законом України "Про основні засади державного нагляду (контролю) у сфері господарської діяльності;
 
 * здійснює інші повноваження, визначені законами та покладені на нього актами Президента України.
 
-Центральний орган виконавчої влади, що реалізує державну політику у сфері космічної діяльності, в межах своєї компетенції:
+Центральний орган виконавчої влади, що забезпечує формування і реалізує державну політику у сфері космічної діяльності, в межах своєї компетенції:
 
 * забезпечує створення та експлуатацію наземного і космічного сегментів супутникових систем зв’язку, мовлення та дистанційного зондування Землі, контролю і аналізу космічної обстановки, координатно-часового та навігаційного забезпечення;
 
 * забезпечує разом з міністерствами та іншими центральними органами виконавчої влади України експлуатацію, підтримку та вдосконалення об’єктів космічної діяльності;
 
-* здійснює ліцензування космічної діяльності в Україні та ліцензування цієї діяльності під юрисдикцією України поза її межами;
+* здійснює облік декларацій про провадження господарської діяльності у сфері космічної діяльності;
 
 * організовує розроблення та функціонування Системи сертифікації космічної техніки України (УкрССКТ);
 
@@ -158,7 +168,7 @@
 
 Космічна діяльність в Україні здійснюється на основі Загальнодержавної цільової науково-технічної космічної програми України, яка розробляється на п’ять років і затверджується Верховною Радою України за поданням Кабінету Міністрів України.
 
-Формування Загальнодержавної цільової науково-технічної космічної програми України здійснює центральний орган виконавчої влади, що забезпечує формування державної політики у сфері космічної діяльності разом із відповідними центральними органами виконавчої влади та Національною академією наук України виходячи із мети та основних засад космічної діяльності в Україні.
+Формування Загальнодержавної цільової науково-технічної космічної програми України здійснює центральний орган виконавчої влади, що забезпечує формування і реалізує державну політику у сфері космічної діяльності разом із відповідними центральними органами виконавчої влади та Національною академією наук України виходячи із мети та основних засад космічної діяльності в Україні.
 
 На основі Загальнодержавної цільової науково-технічної космічної програми України здійснюється:
 
@@ -176,7 +186,7 @@
 
 До правил космічної діяльності в Україні належать норми експлуатаційної придатності об’єктів космічної діяльності, стандарти та нормативні документи, якими регулюється порядок:
 
-* ліцензування космічної діяльності;
+* надання дозволів на право здійснення окремих видів космічної діяльності та забезпечення контролю за провадженням такої діяльності;
 
 * сертифікації та реєстрації об’єктів космічної діяльності;
 
@@ -218,15 +228,73 @@
 
 Космічна діяльність у межах окремого проекту, що призвела до людських жертв, значних матеріальних збитків або завдала значної шкоди довкіллю, може бути обмежена або заборонена відповідно до чинного законодавства України.
 
-**Стаття 10.** Ліцензування космічної діяльності
+**Стаття 9-1.** Декларація про провадження господарської діяльності у сфері космічної діяльності
 
-Будь-які суб’єкти космічної діяльності, які здійснюють або мають наміри здійснювати цю діяльність в Україні або під юрисдикцією України поза її межами, повинні одержати в центральному органі виконавчої влади, що реалізує державну політику у сфері космічної діяльності ліцензію на право здійснення цієї діяльності.
+Декларація про провадження господарської діяльності у сфері космічної діяльності подається суб’єктом космічної діяльності України приватної форми власності, який має намір здійснювати космічну діяльність, до центрального органу виконавчої влади, що забезпечує формування і реалізує державну політику у сфері космічної діяльності.
 
-Перелік видів космічної діяльності, що підлягають ліцензуванню, визначається законом. Ліцензії на провадження такої діяльності видаються в порядку, встановленому законодавством.
+Декларація про провадження господарської діяльності у сфері космічної діяльності подається суб’єктом космічної діяльності України приватної форми власності (уповноваженою ним особою) не менш як за п’ять робочих днів до початку здійснення космічної діяльності за вибором такого суб’єкта космічної діяльності України нарочно, поштовим відправленням з описом вкладення або в електронному вигляді, що оформлюється згідно з вимогами законів у сфері електронних документів.
+
+У декларації про провадження господарської діяльності у сфері космічної діяльності зазначаються найменування суб’єкта господарювання, який має намір здійснювати космічну діяльність, його місцезнаходження та види космічної діяльності, що ним будуть здійснюватися.
+
+Центральний орган виконавчої влади, що забезпечує формування і реалізує державну політику у сфері космічної діяльності, веде облік декларацій про провадження господарської діяльності у сфері космічної діяльності та розміщує їх на своєму веб-сайті.
+
+Порядок подання декларації про провадження господарської діяльності у сфері космічної діяльності встановлюється Кабінетом Міністрів України.
+
+**Стаття 10.** Здійснення космічної діяльності
+
+Здійснення окремих видів космічної діяльності провадиться на підставі дозволу.
+
+Дозволи надаються на здійснення таких видів космічної діяльності:
+
+* випробування (окрім комп’ютерних) ракет-носіїв, в тому числі їх агрегатів та складових частин і космічних апаратів;
+
+* запуски ракет-носіїв та/або космічних апаратів;
+
+* управління космічними апаратами на навколоземній орбіті або в космічному просторі;
+
+* повернення космічних апаратів та/або їх складових частин, що повертаються, з навколоземної орбіти або космічного простору на Землю.
+
+Подання суб’єктом господарювання заяви про одержання (переоформлення, анулювання) дозволу на здійснення окремих видів космічної діяльності здійснюється в паперовій або електронній формі на вибір заявника у порядку, встановленому Законом України "Про дозвільну систему у сфері господарської діяльності".
+
+Для одержання дозволу подається заява, в якій зазначається вид здійснення космічної діяльності, та документи згідно з переліком, встановленим Кабінетом Міністрів України.
+
+Видача дозволу на здійснення окремих видів космічної діяльності здійснюється протягом 90 календарних днів з дня надходження заяви та документів, необхідних для його видачі.
+
+Видача (відмова у видачі, переоформлення, анулювання) дозволу на здійснення окремих видів космічної діяльності здійснюється центральним органом виконавчої влади, що реалізує державну політику у сфері космічної діяльності, на безоплатній основі відповідно до цього Закону згідно з вимогами, передбаченими законами України "Про адміністративні послуги" та "Про дозвільну систему у сфері господарської діяльності", у порядку, встановленому Кабінетом Міністрів України.
+
+Дозвіл видається на строк функціонування об’єкта космічної діяльності.
+
+Підставами для відмови у видачі дозволу є:
+
+* подання суб’єктом господарювання неповного пакета документів, необхідних для одержання дозволу, згідно з установленим переліком;
+
+* виявлення в документах, поданих суб’єктом господарювання для одержання дозволу, недостовірних відомостей;
+
+* невідповідність вимогам законодавства.
+
+Рішення про відмову у видачі дозволу оформляється згідно з вимогами, передбаченими Законом України "Про дозвільну систему у сфері господарської діяльності".
+
+Центральний орган виконавчої влади, що реалізує державну політику у сфері космічної діяльності, анулює дозвіл на здійснення окремих видів космічної діяльності у разі звернення суб’єкта господарювання із заявою про анулювання дозволу.
+
+Центральний орган виконавчої влади, що реалізує державну політику у сфері космічної діяльності, звертається до адміністративного суду з позовом щодо застосування заходу реагування у виді анулювання дозволу на здійснення окремих видів космічної діяльності з таких підстав:
+
+* встановлення факту надання в заяві про видачу дозволу та документах, що додаються до неї, недостовірних відомостей;
+
+* провадження суб’єктом господарювання певних дій щодо здійснення господарської діяльності або видів господарської діяльності, на які отримано дозвіл, із порушенням вимог законодавства, щодо яких центральним органом виконавчої влади, що реалізує державну політику у сфері космічної діяльності, було раніше видано припис про їх усунення із наданням строку, необхідного для їх усунення;
+
+* встановлення факту передачі дозволу іншій юридичній особі для провадження космічної діяльності.
+
+Копія рішення адміністративного суду про анулювання дозволу доводиться до відома суб’єкта господарювання центральним органом виконавчої влади, що реалізує державну політику у сфері космічної діяльності, особисто або надсилається поштовим відправленням з описом вкладення не пізніше п’яти робочих днів з дня прийняття (винесення) такого рішення.
+
+Дія дозволу припиняється через десять робочих днів з дня прийняття рішення/постанови про його анулювання.
+
+Суб’єкт господарювання може отримати новий дозвіл на право провадження певного виду космічної діяльності не раніш як через один рік з дати прийняття рішення про анулювання попереднього дозволу на зазначений вид космічної діяльності.
+
+Державний нагляд та контроль у сфері космічної діяльності здійснюється відповідно до законодавства, що визначає правові та організаційні засади, основні принципи і порядок здійснення державного нагляду (контролю) у сфері господарської діяльності.
 
 **Стаття 11.** Фінансування космічної діяльності
 
-Фінансування космічної діяльності з науковою та господарською метою у тих випадках, коли замовником робіт є держава, здійснюється на підставі Загальнодержавної цільової науково-технічної космічної програми України і передбачається в Державному бюджеті України окремим рядком.
+Фінансування космічної діяльності з науковою та господарською метою у тих випадках, коли замовником робіт є державні органи або установи, здійснюється на підставі Загальнодержавної цільової науково-технічної космічної програми України і передбачається в Державному бюджеті України окремими рядками.
 
 Фінансування космічної діяльності в цілях оборони та безпеки України здійснюється за рахунок коштів Державного бюджету України за державним оборонним замовленням.
 
@@ -238,17 +306,19 @@
 
 **Стаття 11-1.** Контроль за здійсненням зовнішньоекономічної діяльності
 
-Центральний орган виконавчої влади, що реалізує державну політику у сфері космічної діяльності в порядку, встановленому Кабінетом Міністрів України:
+Центральний орган виконавчої влади, що забезпечує формування і реалізує державну політику у сфері космічної діяльності, в порядку, встановленому Кабінетом Міністрів України:
 
-* видає дозволи суб’єктам космічної діяльності України на проведення переговорів з іноземними суб’єктами господарської діяльності з питань дослідження і використання космічного простору, виробництва та експлуатації космічної техніки, здійснення експорту, імпорту і реекспорту космічної техніки та космічних технологій, їх тимчасового вивезення за межі України або тимчасового ввезення на її територію, транзиту територією України;
+* обліковує повідомлення державних суб’єктів космічної діяльності та суб’єктів космічної діяльності України приватної форми власності про проведення переговорів з іноземними суб’єктами господарської діяльності з питань дослідження і використання космічного простору, виробництва та експлуатації космічної техніки, здійснення експорту, імпорту і реекспорту космічної техніки та космічних технологій, їх тимчасового вивезення за межі України або тимчасового ввезення на її територію, транзиту територією України;
 
-* реєструє укладені договори (контракти) суб’єктів космічної діяльності України з іноземними суб’єктами космічної діяльності з питань дослідження і використання космічного простору, виробництва та експлуатації, купівлі-продажу космічної техніки та космічних технологій.
+* реєструє укладені державними суб’єктами космічної діяльності України, суб’єктами космічної діяльності України приватної форми власності, що виконують державне замовлення, з іноземними суб’єктами космічної діяльності договори (контракти) з питань дослідження і використання космічного простору, виробництва та експлуатації, купівлі-продажу космічної техніки та космічних технологій;
 
-Центральний орган виконавчої влади, що реалізує державну політику у сфері космічної діяльності здійснює видачу дозволів та реєстрацію договорів (контрактів) на безоплатній основі.
+* обліковує повідомлення суб’єктів космічної діяльності України приватної форми власності про укладені договори (контракти) з іноземними суб’єктами космічної діяльності з питань дослідження і використання космічного простору, виробництва та експлуатації, купівлі-продажу космічної техніки та космічних технологій.
 
-Одержання відповідних дозволів суб’єктами космічної діяльності України для здійснення зовнішньоекономічної діяльності є обов’язковим.
+Центральний орган виконавчої влади, що забезпечує формування і реалізує державну політику у сфері космічної діяльності, здійснює реєстрацію договорів (контрактів) на безоплатній основі.
 
-Центральний орган виконавчої влади, що реалізує державну політику у сфері космічної діяльності приймає рішення:
+Повідомлення про проведення переговорів та укладені договори (контракти), реєстрація укладених договорів (контрактів) суб’єктами космічної діяльності України для здійснення зовнішньоекономічної діяльності є обов’язковими
+
+Центральний орган виконавчої влади, що забезпечує формування і реалізує державну політику у сфері космічної діяльності, приймає рішення:
 
 * про видачу дозволу на проведення переговорів або про відмову у видачі дозволу на їх проведення - протягом п’яти робочих днів з дня надходження відповідної заяви;
 
@@ -256,14 +326,38 @@
 
 У видачі дозволу на проведення переговорів може бути відмовлено, реєстрацію договору (контракту) може бути скасовано або дозвіл, реєстрація можуть бути анульовані, якщо подано не всі необхідні документи або подані документи не відповідають вимогам законодавства.
 
-Суб’єкт космічної діяльності України має право оскаржити у порядку, визначеному законодавством, рішення про відмову у видачі дозволу на проведення переговорів з питань дослідження і використання космічного простору, виробництва та експлуатації космічної техніки, про відмову у реєстрації договорів (контрактів), предметом яких є космічна діяльність, а також договорів купівлі-продажу космічної техніки і космічних технологій.
+Суб’єкти космічної діяльності України мають право оскаржити у порядку, визначеному законодавством, рішення про відмову у реєстрації договорів (контрактів), предметом яких є космічна діяльність, а також договорів купівлі-продажу космічної техніки і космічних технологій.
+
+У повідомленні про проведення переговорів зазначаються інформація про іноземного суб’єкта господарської діяльності, з яким передбачається проведення переговорів (його найменування та місцезнаходження), перелік питань, що виносяться на обговорення, а також місце та дата проведення переговорів.
+
+У повідомленні про укладені договори (контракти) зазначаються:
+
+* найменування суб’єктів космічної діяльності, між якими укладено договір (контракт), їх реквізити та місцезнаходження;
+
+* предмет договору (контракту);
+
+* інформація про товари, роботи та послуги, що є предметом договору (контракту), їх обсяг, код за Державним класифікатором продукції та послуг і УКТ ЗЕД, країна-виробник;
+
+* найменування кінцевого споживача товарів, робіт та послуг за договором (контрактом), його реквізити та місцезнаходження.
+
+Повідомлення про проведення переговорів подається суб’єктом космічної діяльності України не пізніше ніж за п’ять робочих днів до запланованої дати проведення переговорів, а повідомлення про укладені договори (контракти) - не пізніше ніж через п’ять робочих днів після їх укладення, але в будь-якому випадку не менш як за три робочі дні до дня виконання зобов’язань за цим договором (контрактом).
+
+Повідомлення про проведення переговорів та укладені договори (контракти) подаються за вибором суб’єкта космічної діяльності нарочно, поштовим відправленням з описом вкладення або в електронному вигляді, що оформлюється згідно з вимогами законів у сфері електронних документів.
+
+Порядок подання повідомлення про проведення переговорів, повідомлення про укладені договори (контракти) та порядок реєстрації договорів (контрактів) встановлюються Кабінетом Міністрів України.
+
+Посадовим особам центрального органу виконавчої влади, що забезпечує формування і реалізує державну політику у сфері космічної діяльності, заборонено вимагати від суб’єктів космічної діяльності України подання інформації, не зазначеної в цьому Законі.
+
+Центральний орган виконавчої влади, що забезпечує формування і реалізує державну політику у сфері космічної діяльності, може призупинити діяльність суб’єктів космічної діяльності України приватної форми власності, проведення ними переговорів та виконання договорів (контрактів) у разі виникнення загрози безпеці держави, населення та довкілля за рішенням суду.
 
 ## Розділ III
 ## ЗАГАЛЬНІ ВИМОГИ ДО ОБ’ЄКТІВ КОСМІЧНОЇ ДІЯЛЬНОСТІ
 
 **Стаття 12.** Сертифікація об’єктів космічної діяльності
 
-Будь-який об’єкт космічної діяльності в Україні підлягає сертифікації на відповідність вимогам експлуатаційної придатності, встановленим чинними в Україні нормативними документами, з оформленням сертифіката відповідності.
+Об’єкти космічної діяльності, що виробляються в Україні і призначені для експлуатації на її території, підлягають обов’язковій сертифікації на відповідність вимогам експлуатаційної придатності, встановленим чинними в Україні нормативними документами, з оформленням сертифіката відповідності.
+
+Вироблені за міжнародним замовленням в Україні об’єкти космічної діяльності, у тому числі їх агрегати та складові частини, підлягають сертифікації на відповідність вимогам експлуатаційної придатності за бажанням суб’єктів космічної діяльності України приватної форми власності.
 
 Порядок сертифікації космічної техніки в Україні визначається Системою сертифікації космічної техніки України, яка діє у межах Державної системи сертифікації (УкрСЕПРО).
 
@@ -271,7 +365,7 @@
 
 **Стаття 13.** Реєстрація космічних апаратів та унікальних об’єктів космічної діяльності
 
-Космічні апарати підлягають обов’язковій державній реєстрації в Державному реєстрі космічних апаратів України згідно з Правилами реєстрації космічних апаратів в Україні, які затверджує Кабінет Міністрів України. Якщо космічний апарат створюється спільно з юридичними особами інших держав чи міжнародними організаціями, то питання його реєстрації вирішується згідно з укладеними міжнародними договорами (контрактами).
+Космічні апарати підлягають обов’язковій державній реєстрації в Державному реєстрі космічних апаратів України згідно з Правилами реєстрації космічних апаратів в Україні, які затверджує Кабінет Міністрів України. Якщо космічний апарат створюється спільно з юридичними особами інших держав чи міжнародними організаціями або для інших держав, іноземних суб’єктів господарської діяльності чи міжнародних організацій, то питання його реєстрації вирішується згідно з укладеними міжнародними договорами (контрактами).
 
 На космічний апарат, внесений до Державного реєстру космічних апаратів України, видається реєстраційне посвідчення.
 
@@ -283,7 +377,7 @@
 
 **Стаття 14.** Вилучення космічних апаратів з Державного реєстру
 
-Космічний апарат вилучається з Державного реєстру космічних апаратів України центральним органом виконавчої влади, що реалізує державну політику у сфері космічної діяльності у разі:
+Космічний апарат вилучається з Державного реєстру космічних апаратів України центральним органом виконавчої влади, що забезпечує формування і реалізує державну політику у сфері космічної діяльності у разі:
 
 * фізичного знищення (загибелі);
 
@@ -295,7 +389,7 @@
 
 Об’єкт космічної діяльності допускається до експлуатації, якщо він має сертифікат відповідності.
 
-Центральний орган виконавчої влади, що реалізує державну політику у сфері космічної діяльності може обмежити або заборонити експлуатацію об’єктів космічної діяльності у разі:
+Центральний орган виконавчої влади, що забезпечує формування і реалізує державну політику у сфері космічної діяльності може обмежити або заборонити експлуатацію об’єктів космічної діяльності в Україні у разі:
 
 * прострочення або відсутності сертифіката відповідності;
 
@@ -343,7 +437,7 @@
 
 **Стаття 20.** Державний нагляд за безпекою космічної діяльності
 
-Державний нагляд за дотриманням вимог безпеки космічної діяльності, а також навчання та атестація осіб, які контролюють дотримання космічних правил і наявність необхідного рівня безпеки космічної діяльності, а також осіб, які розслідують інциденти та надзвичайні події, покладається на центральний орган виконавчої влади, що реалізує державну політику у сфері космічної діяльності, Міністерство оборони України та інші органи виконавчої влади відповідно до їхньої компетенції.
+Державний нагляд за дотриманням вимог безпеки космічної діяльності, а також навчання та атестація осіб, які контролюють дотримання космічних правил і наявність необхідного рівня безпеки космічної діяльності, а також осіб, які розслідують інциденти та надзвичайні події, покладається на центральний орган виконавчої влади, що забезпечує формування і реалізує державну політику у сфері космічної діяльності, Міністерство оборони України та інші органи виконавчої влади відповідно до їхньої компетенції.
 
 **Стаття 21.** Безпека населення та охорона довкілля
 
@@ -355,17 +449,17 @@
 
 Охорона космічної техніки під час виробництва, випробування, транспортування і експлуатації на поверхні Землі та майна суб’єктів космічної діяльності забезпечується згідно із законодавством.
 
-При транспортуванні космічної техніки, що становить загрозу для життя та здоров’я людей або довкілля, використовується спеціальний транспорт під охороною у порядку, затвердженому центральним органом виконавчої влади, що забезпечує формування державної політики у сфері космічної діяльності за погодженням з центральним органом виконавчої влади в галузі транспорту та центральним органом управління Національної поліції.
+При транспортуванні космічної техніки, що становить загрозу для життя та здоров’я людей або довкілля, використовується спеціальний транспорт під охороною у порядку, затвердженому центральним органом виконавчої влади, що забезпечує формування і реалізує державну політику у сфері космічної діяльності за погодженням з центральним органом виконавчої влади в галузі транспорту та центральним органом управління Національної поліції.
 
-На підприємствах, що належать до сфери управління центрального органу виконавчої влади, що забезпечує формування державної політики у сфері космічної діяльності, за погодженням з центральним органом управління Національної поліції можуть утворюватися підрозділи відомчої воєнізованої охорони, працівники яких під час виконання службових обов’язків мають право користуватися вогнепальною зброєю та спеціальними засобами в порядку і відповідно до вимог, встановлених законодавством.
+На підприємствах, що належать до сфери управління центрального органу виконавчої влади, що забезпечує формування і реалізує державну політику у сфері космічної діяльності, за погодженням з центральним органом управління Національної поліції можуть утворюватися підрозділи відомчої воєнізованої охорони, працівники яких під час виконання службових обов’язків мають право користуватися вогнепальною зброєю та спеціальними засобами в порядку і відповідно до вимог, встановлених законодавством.
 
-Центральний орган виконавчої влади, що забезпечує формування державної політики у сфері космічної діяльності за погодженням з центральним органом управління Національної поліції затверджує положення про відомчу воєнізовану охорону та здійснює контроль за діяльністю її підрозділів.
+Центральний орган виконавчої влади, що забезпечує формування і реалізує державну політику у сфері космічної діяльності за погодженням з центральним органом управління Національної поліції затверджує положення про відомчу воєнізовану охорону та здійснює контроль за діяльністю її підрозділів.
 
 **Стаття 23.** Сповіщення про інциденти та надзвичайні події
 
 Суб’єкти космічної діяльності в обов’язковому порядку повинні подавати повну інформацію органам виконавчої влади про будь-які інциденти та надзвичайні події.
 
-Центральні органи виконавчої влади, що забезпечують формування та реалізують державну політику у сфері космічної діяльності, міністерства та інші центральні органи виконавчої влади повинні подавати своєчасну та достовірну інформацію про небезпеку, яка виникає при здійсненні космічної діяльності, а також про заходи щодо створення необхідних умов безпеки для населення, майна та довкілля уповноваженому державному органу, підприємствам, установам та організаціям, а також громадянам на їхню вимогу.
+Центральний орган виконавчої влади, що забезпечує формування та реалізує державну політику у сфері космічної діяльності, міністерства та інші центральні органи виконавчої влади повинні подавати своєчасну та достовірну інформацію про небезпеку, яка виникає при здійсненні космічної діяльності, а також про заходи щодо створення необхідних умов безпеки для населення, майна та довкілля уповноваженому державному органу, підприємствам, установам та організаціям, а також громадянам на їхню вимогу.
 
 У разі виникнення загрози під час здійснення космічної діяльності для населення та довкілля України чи іноземних держав центральний орган виконавчої влади, що реалізує державну політику у сфері космічної діяльності негайно інформує про це відповідні державні органи України згідно з чинним законодавством, а також вживає необхідних заходів щодо забезпечення безпеки населення, майна громадян, підприємств, установ і організацій та довкілля.
 
@@ -388,19 +482,19 @@
 
 **Стаття 27.** Взаємодія Міністерства оборони України з центральним органом виконавчої влади з питань космічної діяльності у сфері космічної діяльності
 
-Порядок взаємодії Міністерства оборони України і центральних органів виконавчої влади, що забезпечують формування та реалізують державну політику у сфері космічної діяльності при здійсненні космічної діяльності визначається Положенням, яке затверджується Президентом України.
+Порядок взаємодії Міністерства оборони України і центрального органу виконавчої влади, що забезпечує формування і реалізує державну політику у сфері космічної діяльності при здійсненні космічної діяльності визначається Положенням, яке затверджується Президентом України.
 
 **Стаття 28.** Компетенція Міністерства оборони України у сфері космічної діяльності
 
 Міністерство оборони України в межах своєї компетенції:
 
-* розробляє концептуальні основи державної космічної політики та Загальнодержавну цільову науково-технічну космічну програму України в частині, пов’язаній зі створенням та використанням космічної техніки військового призначення, а також разом із центральним органом виконавчої влади, що забезпечує формування державної політики у сфері космічної діяльності - космічної техніки подвійного призначення;
+* розробляє концептуальні основи державної космічної політики та Загальнодержавну цільову науково-технічну космічну програму України в частині, пов’язаній зі створенням та використанням космічної техніки військового призначення, а також разом із центральним органом виконавчої влади, що забезпечує формування і реалізує державну політику у сфері космічної діяльності - космічної техніки подвійного призначення;
 
-* формує та організовує виконання замовлень на роботи, пов’язані зі створенням і використанням космічної техніки військового, а також разом із центральним органом виконавчої влади, що реалізує державну політику у сфері космічної діяльності - космічної техніки подвійного призначення на основі Загальнодержавної цільової науково-технічної космічної програми України;
+* формує та організовує виконання замовлень на роботи, пов’язані зі створенням і використанням космічної техніки військового, а також разом із центральним органом виконавчої влади, що забезпечує формування і реалізує державну політику у сфері космічної діяльності - космічної техніки подвійного призначення на основі Загальнодержавної цільової науково-технічної космічної програми України;
 
 * здійснює використання космічної техніки у сфері оборони України;
 
-* забезпечує разом із центральним органом виконавчої влади, що реалізує державну політику у сфері космічної діяльності функціонування і розвиток об’єктів наземної та космічної інфраструктури;
+* забезпечує разом із центральним органом виконавчої влади, що забезпечує формування і реалізує державну політику у сфері космічної діяльності функціонування і розвиток об’єктів наземної та космічної інфраструктури;
 
 * бере участь у здійсненні сертифікації космічної техніки військового призначення.
 
