--- a/Закони/Про_основні_засади_державного_нагляду_(контролю)_у_сфері_господарської_діяльності.md
+++ b/Закони/Про_основні_засади_державного_нагляду_(контролю)_у_сфері_господарської_діяльності.md
@@ -26,7 +26,7 @@
 
 Дія цього Закону поширюється на відносини, пов'язані зі здійсненням державного нагляду (контролю) у сфері господарської діяльності.
 
-Дія цього Закону не поширюється на відносини, що виникають під час здійснення заходів валютного контролю, митного контролю на кордоні, державного експортного контролю, контролю за дотриманням бюджетного законодавства, банківського нагляду, державного контролю за дотриманням законодавства про захист економічної конкуренції, державного нагляду (контролю) в галузі телебачення і радіомовлення.
+Дія цього Закону не поширюється на відносини, що виникають під час здійснення заходів валютного контролю, митного контролю на кордоні, державного експортного контролю (крім здійснення державного нагляду (контролю) за дотриманням суб’єктами космічної діяльності України приватної форми власності законодавства про космічну діяльність в Україні), контролю за дотриманням бюджетного законодавства, банківського нагляду, державного контролю за дотриманням законодавства про захист економічної конкуренції, державного нагляду (контролю) в галузі телебачення і радіомовлення.
 
 Контроль за додержанням ліцензіатами вимог ліцензійних умов здійснюється органами ліцензування у встановленому цим Законом порядку з урахуванням особливостей, визначених Законом України "Про ліцензування видів господарської діяльності".
 
