--- a/Закони/Про_підприємництво.md
+++ b/Закони/Про_підприємництво.md
@@ -11,7 +11,7 @@
 
 Діяльність, пов'язана з обігом наркотичних засобів, психотропних речовин, їх аналогів і прекурсорів, здійснюється відповідно до Закону України "Про наркотичні засоби, психотропні речовини і прекурсори".
 
-Діяльність, пов'язана з охороною окремих особливо важливих об'єктів права державної власності, перелік яких визначається у встановленому Кабінетом Міністрів України порядку, а також діяльність, пов'язана з проведенням криміналістичних, судово-медичних, судово-психіатричних експертиз та розробленням, випробуванням, виробництвом та експлуатацією ракет-носіїв, у тому числі з їх космічними запусками із будь-якою метою, може здійснюватися тільки державними підприємствами та організаціями, а проведення ломбардних операцій - також і повними товариствами.
+Діяльність, пов'язана з охороною окремих особливо важливих об'єктів права державної власності, перелік яких визначається у встановленому Кабінетом Міністрів України порядку, а також діяльність, пов'язана з проведенням криміналістичних, судово-медичних, судово-психіатричних експертиз, може здійснюватися тільки державними підприємствами та організаціями, а проведення ломбардних операцій - також і повними товариствами.
 
 Діяльність, пов’язана з виробництвом бензинів моторних сумішевих або з додаванням (змішуванням) біоетанолу та/або біокомпонентів на його основі до вуглеводневої основи (бензинів, фракцій, компонентів тощо), здійснюється підприємствами, перелік яких визначається Кабінетом Міністрів України за поданням центрального органу виконавчої влади, що забезпечує реалізацію
 державної політики в паливно-енергетичному комплексі.
