--- a/Конституція.md
+++ b/Конституція.md
@@ -1556,4 +1556,6 @@
 
 ***
 
-[Джерело](https://zakon.rada.gov.ua/laws/show/254%D0%BA/96-%D0%B2%D1%80)
+Ідентифікатор: [254к/96-ВР](https://zakon.rada.gov.ua/laws/show/254к/96-вр)
+
+[Картка документа](https://zakon.rada.gov.ua/laws/card/254к/96-вр)
